# atlasserver

./: CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  build.rs
.github/workflows/: ci.yml
atlas_ads/: Cargo.toml
atlas_ads/src/: lib.rs
atlas_apple_server_notify/: Cargo.toml
atlas_apple_server_notify/src/: lib.rs
atlas_broadcast/: Cargo.toml
atlas_broadcast/src/: lib.rs
atlas_dynamo/: Cargo.toml
atlas_dynamo/src/: error.rs  lib.rs
atlas_iap/: Cargo.toml  README.md
atlas_iap/proto/: header.proto  rustproto.proto  schema.proto
atlas_iap/src/: error.rs  lib.rs  resource.rs  utc_time.rs
atlas_iap/src/receipt/: dynamodb.rs  in_memory.rs  mod.rs
atlas_iap/src/schema/: mod.rs  schema.rs
atlas_pubsub/: Cargo.toml
atlas_pubsub/src/: error.rs  lib.rs  module.rs  resources.rs
atlas_pubsub/src/db/: in_memory.rs  mod.rs  redis_pubsub.rs
atlas_push/: Cargo.toml
atlas_push/proto/: schema.proto
atlas_push/src/: dynamo.rs  error.rs  fcmtoken.rs  in_memory.rs  lib.rs  resource.rs
atlas_push/src/schema/: schema.rs
atlas_sso/: Cargo.toml  README.md  build.rs
atlas_sso/proto/: schema.proto
atlas_sso/src/: dynamo_table.rs  error.rs  fb.rs  lib.rs  siwa.rs
atlas_sso/src/db/: dynamodb.rs  in_memory.rs  mod.rs
atlas_sso/src/schema/: schema.rs
atlasserver/: CHANGELOG.md  Cargo.toml
atlasserver/examples/: custom_server.rs
atlasserver/src/: error.rs  lib.rs  rejection.rs
atlasserver/src/schema/: mod.rs
atlasserver/src/userlogin/: mod.rs
atlasserver/src/userlogin/sessions/: dynamodb.rs  mod.rs
atlasserver/src/userlogin/user/: dynamodb.rs  in_memory.rs  mod.rs
atlasserver/tests/: sessions_dynamodb.rs
examples/: custom_server.rs  graceful_shutdown.rs
proto/: schema.proto
src/: dynamo_util.rs  error.rs  lib.rs  pbwarp.rs  rejection.rs  status.rs
src/schema/: schema.rs
src/userlogin/: ipdb.rs  mod.rs
src/userlogin/sessions/: dynamodb.rs  in_memory.rs  mod.rs
src/userlogin/user/: dynamodb.rs  mod.rs
tests/: sessions_dynamodb.rs
