[package]
name = "atlasserver"
version = "0.2.0"
authors = [
    "Stephan Dilly <dilly.stephan@gmail.com>",
    "lyon <lyonbeckers@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
description = "Atlas is a rust library for the purpose of composing REST APIs out of re-usable and extensible modules, specifically with supporting the networking needs of online gaming services in mind."
repository = "https://github.com/gameroasters/atlasserver"
homepage = "https://github.com/gameroasters/atlasserver"

[dependencies]
async-trait = "0.1"
frunk = "0.3"
warp = "0.3"
tracing = "0.1"
thiserror = "1.0"
tokio = { version = "1", default-features = false, features = ["macros", "rt-multi-thread"] }
rusoto_core = "0.47"
rusoto_dynamodb = "0.47"
uuid = { version = "0.8", features = ["v4"] }
serde = "1.0"
chrono = "0.4"
protobuf = { version = "=2.22.1", features = ["with-serde"] }
serde_json = "1.0"

[features]
default = ["json-proto"]
json-proto = ["with-serde"]
with-serde = []

[build-dependencies]
protobuf-codegen-pure = "=2.22.1"

[dev-dependencies]
mockito = "0.30"
json = "0.12"
tracing-subscriber = "0.2"
pretty_assertions = "0.7"
