[package]
name = "atlas_iap"
version = "0.1.0"
authors = ["lyon <lyonbeckers@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["json-proto"]
json-proto = ["with-serde"]
with-serde = []

[dependencies]
# atlasserver = { version = "0.1.2" }
atlasserver = { git = "https://github.com/gameroasters/atlasserver.git", rev="f40dd52"}
# atlasserver = { path = "../../atlasserver" }
async-trait = "0.1"
chrono = "0.4"
rusoto_core = "0.47"
rusoto_dynamodb = "0.47"
iap = { git = "https://github.com/gameroasters/iap-rs.git", rev="493a29d" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.21", features = ["derive"] }
strum_macros = "0.21"
tracing = "0.1"
thiserror = "1.0"
tokio = { version = "1", default-features = false, features = ["macros", "rt-multi-thread"] }
uuid = { version = "0.8", features = ["v4"] }
warp = "0.3"
protobuf = { version = "=2.22.1", features = ["with-serde"] }
# TODO:
atlas_sso = { path = "../atlas_sso" }

[dev-dependencies]
mockall = "0.10"
serde_json = "1.0"

[build-dependencies]
protobuf-codegen-pure = "=2.22.1"