[package]
name = "atlas_push"
version = "0.1.0"
authors = ["Lyon Beckers <lyonbeckers@gmail.com>"]
edition = "2018"

[features]
default = ["json-proto"]
json-proto = ["with-serde"]
with-serde = []

[dependencies]
atlasserver = { path = "../atlasserver" }
atlas_dynamo = { path = "../atlas_dynamo" }
async-trait = "0.1"
# fcm = "0.9"
fcm = { git = "https://github.com/extrawurst/fcm-rust.git", rev="dc5a6be"}
frunk = "0.3"
rusoto_core = "0.47"
rusoto_dynamodb = "0.47"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.21", features = ["derive"] }
tracing = "0.1"
thiserror = "1.0"
tokio = { version = "1", default-features = false, features = ["macros", "rt-multi-thread"] }
warp = "0.3"
protobuf = { version = "=2.22.1", features = ["with-serde"] }

[dev-dependencies]
pretty_assertions = "0.7"

[build-dependencies]
protobuf-codegen-pure = "=2.22.1"
