[package]
name = "atlas_sso"
version = "0.1.0"
edition = "2018"

[features]
default = ["json-proto"]
json-proto = ["with-serde"]
with-serde = []

[dependencies]
atlasserver = { path = "../atlasserver" }
atlas_dynamo = { path = "../atlas_dynamo" }
tokio = { version = "1", features = ["rt-multi-thread","net","macros"] }
warp = { version = "0.3", default-features = false }
async-trait = "0.1"
thiserror = "1.0"
rusoto_core = "0.47"
rusoto_dynamodb = "0.47"
tracing = "0.1"
tracing-futures = "0.2"
serde = "1"
serde_json = "1"
strum = { version = "0.21", features = ["derive"] }
# TODO: make release
sign-in-with-apple = { git = "https://github.com/gameroasters/sign-in-with-apple.git", rev="eed3b51" } 
# sign-in-with-apple = "0.1" 
protobuf = { version = "=2.22.1", features = ["with-serde"] }

[dev-dependencies]
pretty_assertions = "0.7"
futures = "0.3"

[build-dependencies]
protobuf-codegen-pure = "=2.22.1"